# VMAVIFICIENT

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE-BINARY  Makefile  Makefile.in  README.md  SECURITY.md  config.ini.example  configdata.pm  test_pgs.c  test_pgs_fre_forced.srt
.github/: actionlint.yaml
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  ci.yml  pipeline.yml  release.yml
build-test/: Doxyfile.docs
cmake/: CodeCoverage.cmake  CompilerFlags.cmake  Criterion.cmake  Sanitizers.cmake
cmake/modules/: VmavCompileOptions.cmake  VmavReproducible.cmake  VmavTesting.cmake  VmavThirdParty.cmake
cmake/toolchains/: linux-aarch64-musl.cmake  linux-aarch64.cmake  linux-x86_64-musl.cmake  linux-x86_64.cmake  macos-arm64.cmake  macos-x86_64.cmake  windows-x86_64-mingw.cmake
docs/: MIGRATION-PLAN.md  MIGRATION-SUMMARY.md  README.md  false-positives.md  gatekeeper-bypass.md  licensing.md  smartscreen-bypass.md
docs/design/: architecture.md
docs/design/adr/: ADR-001-migration-plan.md  README.md
docs/superpowers/plans/: 2026-07-05-tv-show-support.md  2026-07-07-pipeline-failure-handling.md  2026-07-07-v2-release-prep.md  2026-07-08-thin-main-refactor.md  2026-07-11-ci-rework.md
docs/superpowers/specs/: 2026-07-05-tv-show-support-design.md  2026-07-11-ci-rework-design.md
include/: audio_encode.h  config.h  crf_search.h  encode_preset.h  film_grain.h  final_mux.h  media_analysis.h  media_crop.h  media_hdr.h  media_naming.h  media_ssimu2.h  media_tracks.h  subtitle_convert.h  tmdb.h  ui.h  utils.h  video_encode.h
include/openssl/: configuration.h
include/vmavificient/: audio_encode.h  config.h  crf_search.h  encode_preset.h  final_mux.h  media_analysis.h  media_info.h  media_naming.h  media_tracks.h  pipeline.h  proc.h  rpu_extract.h  srt_sanitize.h  subtitle_convert.h  tmdb.h  ui.h  utils.h  video_encode.h  vmav_analysis.h  vmav_audio.h  vmav_cache.h  vmav_cli.h  vmav_config.h  vmav_crf_search.h  vmav_crop.h  vmav_encode_state.h  vmav_final_mux.h  vmav_hdr.h  vmav_log.h  vmav_media.h  vmav_naming.h  vmav_os.h  vmav_preset.h  vmav_result.h  vmav_rpu.h  vmav_subproc.h  vmav_subtitle.h  vmav_svtav1.h  vmav_tmdb.h  vmav_tracks.h  (+4 more)
packaging/deb/: build_deb.sh  control.in  copyright
packaging/msi/: build_msi.sh  vmavificient.wxs.in
packaging/pkg/: build_pkg.sh
packaging/tarball/: build_tarball.sh
rust/vmav_ssimu2/: Cargo.toml  test_crf_search.c  test_files.c  test_smoke.c
rust/vmav_ssimu2/src/: lib.rs
scripts/: check-cmake-presets.sh  check-doxygen.sh  check-msg.sh  check.sh  coverage.sh  fetch_llvm_mingw.sh  fetch_musl_sysroot.sh  fetch_real_content.sh  fetch_tessdata.sh  fetch_zig.sh  ffmpeg-configure-wrapper.sh  fuzz.sh  repro_check.sh  rotate-models.sh
src/: CMakeLists.txt  audio_encode.c  config.c  config_defaults.h  crf_search.c  encode_preset.c  film_grain.c  final_mux.c  main.c  media_analysis.c  media_crop.c  media_hdr.c  media_naming.c  media_ssimu2.c  media_tracks.c  rpu_extract.c  subtitle_convert.c  tmdb.c  ui.c  utils.c  video_encode.c
src/audio_encode/: audio_encode.c
src/commands/: CMakeLists.txt  cmd_analyze.c  cmd_doctor.c  cmd_encode.c  cmd_help.c  cmd_search.c  cmd_version.c  commands.h
src/config/: config.c
src/crf_search/: crf_search.c
src/encode/: CMakeLists.txt  audio_encode.c  crf_search.c  encode_state.c  encoder_preset.c  encoder_preset.h  encoder_svtav1.c  encoder_vmaf.c  final_mux.c  subtitle_convert.c  video_encode.c
src/encode_preset/: encode_preset.c
src/final_mux/: final_mux.c
src/foundations/: CMakeLists.txt  vmav_cache.c  vmav_cli.c  vmav_config.c  vmav_log.c  vmav_os_posix.c  vmav_os_win.c  vmav_result.c  vmav_subproc_posix.c  vmav_subproc_win.c  vmav_ui.c
src/integrations/: CMakeLists.txt  tmdb_client.c  tmdb_match.c
src/main/: main.c
src/media/: CMakeLists.txt  media_analysis.c  media_crop.c  media_hdr.c  media_naming.c  media_probe.c  media_rpu.c  media_tracks.c
src/media_analysis/: media_analysis.c
src/media_crop/: media_crop.c
src/media_hdr/: media_hdr.c
src/media_info/: media_info.c
src/media_naming/: media_naming.c
src/media_tracks/: media_tracks.c
src/pipeline/: cli.c  encode_pass.c  pipeline_util.c  stage_audio.c  stage_grain.c  stage_naming.c  stage_probe.c  stage_subs.c
src/rpu_extract/: rpu_extract.c
src/subtitle_convert/: srt_sanitize.c  subtitle_convert.c
src/tmdb/: tmdb.c
src/ui/: ui.c
src/util/: CMakeLists.txt  json_io.c  json_io.h  pathbuf.c  pathbuf.h  str_utils.c  str_utils.h
src/utils/: proc.c  utils.c
src/video_encode/: encoder_config.c  encoder_config.h  video_encode.c
tests/: CMakeLists.txt  test_crf_search.c  test_media_naming.c  test_smoke.c  test_srt_sanitize.c  test_suites.h
tests/fixtures/: CMakeLists.txt  fixturegen.c
tests/integration/: CMakeLists.txt  it_encode_bbb.c  it_encode_hdr.c  it_encode_resume.c  it_encode_smoke.c  it_fixtures_smoke.c
tests/unit/: test_audio_encode.c  test_cache.c  test_cli.c  test_config.c  test_crf_search.c  test_encode_state.c  test_encoder_preset.c  test_encoder_svtav1.c  test_encoder_vmaf.c  test_ffmpeg_link.c  test_final_mux.c  test_json_io.c  test_libcurl_link.c  test_libdovi_link.c  test_libhdr10plus_link.c  test_libjpeg_link.c  test_libpng_link.c  test_libtiff_link.c  test_log.c  test_media_analysis.c  test_media_crop.c  test_media_hdr.c  test_media_naming.c  test_media_probe.c  test_media_rpu.c  test_media_tracks.c  test_openssl_link.c  test_os.c  test_pathbuf.c  test_result.c  test_str_utils.c  test_subproc.c  test_subtitle_convert.c  test_svtav1_link.c  test_tesseract_link.c  test_tmdb_match.c  test_ui.c  test_video_encode.c  test_vmaf_link.c  test_zlib_link.c
